細かい変更

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-  <h1>ショッピングサイト</h1>
+  <h1>ショッピングサイト(のテスト)</h1>
   <a href=shop/shop_list.php><h2>商品を購入したい方はこちら</h2></a><br/>
   <br/>
   <br/>
