--- a/shop/shop_form.html
+++ b/shop/shop_form.html
@@ -24,7 +24,7 @@
     <input type="radio" name="chumon" value="chumontouroku">会員登録して注文する<br/>
     <br/>
     ※会員登録する方は以下の項目も入力してください。<br/>
-    パスワードを入力してください。<br/>
+    パスワードを入力してください(6桁以上、12桁以下)<br/>
     <input type="password" name="pass" style="width:100px"><br/>
     パスワードをもう１度入力してください。<br/>
     <input type="password" name="pass2" style="width:100px"><br/>
